DesignProject/tests/error/test14.src
// type mismatch in arithmetic operation
func testArithMismatch() -> integer {
    local x : integer;
    local y : integer;
    local str : string;
    x := 5;
    y := x + str;  // error: cannot add integer and string
    return(y);
}


